# GameEngine

./: .gitignore  CMakeLists.txt  GameEngine.sln  README.md
assets/shaders/: default.frag.glsl  default.hlsl  default.vert.glsl
docs/: ARCHITECTURE_RU.md  EDITOR_GUIDE_RU.md  ENGINE_EXTENSIBILITY_RU.md  GAME_DEVELOPMENT_RU.md  GETTING_STARTED_RU.md  README_RU.md
scripts/ScriptRuntime/: EngineScripts.cs  Program.cs
src/Editor/: EditorContext.h  EditorState.h  EditorUI.cpp  EditorUI.h
src/Editor/Panels/: AssetsPanel.cpp  AssetsPanel.h  BuildPanel.cpp  BuildPanel.h  IEditorPanel.h  InspectorPanel.cpp  InspectorPanel.h  LevelClassesPanel.cpp  LevelClassesPanel.h  PanelRegistry.cpp  PanelRegistry.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  StatsPanel.cpp  StatsPanel.h  ViewportPanel.cpp  ViewportPanel.h  VoxelWorldPanel.cpp  VoxelWorldPanel.h  WorldSettingsPanel.cpp  WorldSettingsPanel.h
src/Engine/: Engine.cpp  Engine.h
src/Engine/Core/: Log.cpp  Log.h
src/Engine/ECS/: Registry.h
src/Engine/Input/: InputState.cpp  InputState.h
src/Engine/Math/: Vector3.h
src/Engine/Platform/: Window.cpp  Window.h
src/Engine/Rendering/: IRenderBackend.h  RenderAPI.h  Renderer.cpp  Renderer.h
src/Engine/Rendering/Backends/: DirectX12RenderBackend.cpp  DirectX12RenderBackend.h  NullRenderBackend.cpp  NullRenderBackend.h  VulkanRenderBackend.cpp  VulkanRenderBackend.h
src/Engine/Resources/: ResourceManager.cpp  ResourceManager.h
src/Engine/Scene/: Components.h  Entity.cpp  Entity.h  World.cpp  World.h
src/Engine/Scripting/: ScriptHost.cpp  ScriptHost.h
src/Engine/Systems/: ISystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  ScriptSystem.cpp  ScriptSystem.h  SystemContext.h  VoxelGameplaySystem.cpp  VoxelGameplaySystem.h
src/Game/Minecraft/: VoxelMesher.cpp  VoxelMesher.h  VoxelWorld.cpp  VoxelWorld.h
src/Sandbox/: main.cpp
